--- a/src/components/Profile/MyPosts/Post/Post.module.css
+++ b/src/components/Profile/MyPosts/Post/Post.module.css
@@ -1,7 +1,8 @@
-.post_wrapper {
-
-}
-
 .post {
-  
+  margin: 10px 0;
+  background-color: #fff;
+  border-radius: 5px; 
+  border: 1px solid rgb(219, 219, 219);
+  padding: 10px;
+  box-shadow: 0 3px 10px rgba(0,0,0,.1);
 }
