--- a/src/components/Profile/MyPosts/MyPosts.module.css
+++ b/src/components/Profile/MyPosts/MyPosts.module.css
@@ -1,7 +1,17 @@
 .add_post {
+    display: flex;
+    flex-direction: column;
     margin: 10px 0;
 }
 
-.posts {
+.textarea {
+    width: 50%;
+    height: 100px;
+    resize: none;
+}
 
+.button {
+    width: 50.5%;
+    height: 25px;
+    margin: 10px 0 25px;
 }
