--- a/src/components/Dialogs/Dialogs.module.css
+++ b/src/components/Dialogs/Dialogs.module.css
@@ -3,3 +3,13 @@
     grid-template-columns: 260px auto;
     grid-column-gap: 30px;
 }
+
+.add_msg {
+    display: flex;
+    flex-direction: column;
+    margin-top: 30px;
+}
+
+.textarea {
+    margin-bottom: 15px;
+}
