--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -3,9 +3,20 @@
     grid-column: 1 / 3;
     grid-row: 1 / 2;
     background: rgb(187, 214, 162);
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
   }
   
   .img_logo {
     height: 100%;
     object-fit: contain;
   }
+
+.loginBlock {
+
+}
+
+.link {
+  color: #2f2f2f;
+}
