--- a/src/components/common/FormsControls/FormsControls.module.css
+++ b/src/components/common/FormsControls/FormsControls.module.css
@@ -1,3 +1,9 @@
 .formsControl.error {
     border: 2px solid red;
 }
+
+.formSummaryError {
+    border: 1px solid red;
+    padding: 5px;
+    color: rosybrown;
+}
